--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    margin-bottom: 150px;
 }
 h1{
     font-size: 50px;
@@ -30,3 +31,9 @@ section{
     color: #ffff;
     font-weight: 400;
 }
+.dream-bg{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
+}
+
