--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@ body{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+    
+}
+section{
     margin-bottom: 150px;
 }
 h1{
@@ -13,7 +16,7 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.flexible-area{
     display: flex;
 }
 .half-width{
@@ -35,5 +38,42 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+    
+}
+
+.ex-img{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-area{
+    width: 40%;
+    box-shadow: 10px 10px 30px gray;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+   
+}
+h2{
+    font-size: 40px;
+}
+p{
+    text-align: justify;
+}
+
+.border-blue{
+    border-left: 10px solid tomato;
+}
+
+.border-orange{
+    border-left: 10px solid blue;
+}
+
+
+footer p{
+    text-align: center;
 }
 
